# bookloan

./: .env  .gitignore  docker-compose.yml  manage.py  pyproject.toml
bookloan/: api.py  asgi.py  settings.py  urls.py  wsgi.py
core/: models.py  views.py
core/migrations/: 0001_initial.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/api/types/: api.ts
frontend/src/components/: AdminBookLoan.vue  LoanList.vue
frontend/src/views/: Home.vue  LoanForm.vue  Loans.vue
scripts/: build-frontend.sh
templates/admin/: index.html
